--- a/AUTHORS
+++ b/AUTHORS
@@ -68,6 +68,7 @@ Evgeny Leksikov <evgeny.leksikov@intel.com>
 Ezra Kissel <ezkissel@indiana.edu>
 Firas Jahjah <firasj@amazon.com>
 Frank Zago <fzago@cray.com>
+fullerdj <fullerdj@users.noreply.github.com>
 Gal Pressman <galpress@amazon.com>
 Gengbin Zheng <gengbin.zheng@intel.com>
 germanafro <andreasberger86@hotmail.de>
