prov/cxi: Change macros CXI_FI_* to FI_CXI_*
NETCASSINI-4953

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -650,27 +650,27 @@ T}@T{
 FI_INT64, FI_DOUBLE
 T}
 T{
-CXI_FI_MINMAXLOC
+FI_CXI_MINMAXLOC
 T}@T{
 FI_INT64, FI_DOUBLE
 T}
 T{
-CXI_FI_MINNUM
+FI_CXI_MINNUM
 T}@T{
 FI_DOUBLE
 T}
 T{
-CXI_FI_MAXNUM
+FI_CXI_MAXNUM
 T}@T{
 FI_DOUBLE
 T}
 T{
-CXI_FI_MINMAXNUMLOC
+FI_CXI_MINMAXNUMLOC
 T}@T{
 FI_DOUBLE
 T}
 T{
-CXI_FI_REPSUM
+FI_CXI_REPSUM
 T}@T{
 FI_DOUBLE
 T}
