prov/cxi: Fix fegetround() and type handling
Make use of fegetround() dynamic, not static at endpoint creation.

Correct matching type with operator (signed/unsigned).

NETCASSINI-4971
NETCASSINI-4954

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -679,6 +679,8 @@ T}
 Data space is limited to 32 bytes in all cases except REPSUM, which
 supports only a single FI_DOUBLE.
 .PP
+Only unsigned bitwise operators are supported.
+.PP
 Only signed integer arithmetic operations are are supported.
 .PP
 The MINMAXLOC operators are a mixed data representation consisting of
