--- a/AUTHORS
+++ b/AUTHORS
@@ -4,9 +4,9 @@ aingerson <aingerson@gmail.com>
 aingerson <alexia.ingerson@intel.com>
 Ajay Kulkarni <ajaykulk@cisco.com>
 aleksandra.justa <ajusta@gklab-125-155.igk.intel.com>
+Alexia Ingerson <alexia.ingerson@intel.com>
 Alex McKinley <alex.mckinley@intel.com>
 Alex McKinley <alex@mckpals.com>
-Alexia Ingerson <alexia.ingerson@intel.com>
 Amir Shehata <shehataa@ornl.gov>
 Amith Abraham <aabraham@cray.com>
 Ana Guerrero López <ana@ekaia.org>
@@ -22,16 +22,16 @@ Arun Ilango <arun.ilango@intel.com>
 Ashley Pittman <ampittma@ampittma-mac02.pittman.co.uk.20.20.172.in-addr.arpa>
 Ashley Pittman <ashley.m.pittman@intel.com>
 Automated bot for the OFIWG organization <ofiwg-bot@users.noreply.github.com>
+aws-ceenugal <123417666+aws-ceenugal@users.noreply.github.com>
 AWS ParallelCluster user <centos@ip-172-31-23-100.ec2.internal>
 AWS ParallelCluster user <ec2-user@ip-172-31-0-240.us-east-2.compute.internal>
 AWS ParallelCluster user <ec2-user@ip-172-31-15-28.ec2.internal>
-aws-ceenugal <123417666+aws-ceenugal@users.noreply.github.com>
+Benjamin Drung <bdrung@debian.org>
 Ben Lynam <ben.lynam23@gmail.com>
 Ben Lynam <ben.lynam@cornelisnetworks.com>
 Ben Menadue <ben.menadue@nci.org.au>
-Ben Turrubiates <bturrubi@cisco.com>
 Ben Turrubiates <bturrubiates@lanl.gov>
-Benjamin Drung <bdrung@debian.org>
+Ben Turrubiates <bturrubi@cisco.com>
 Bernd Schubert <bschubert@ddn.com>
 Bernhard M. Wiedemann <bwiedemann@suse.de>
 Bob Cernohous <bob.cernohous@cornelisnetworks.com>
@@ -44,8 +44,9 @@ Casey Carter <cacarter@microsoft.com>
 Chang Hyun Park <heartinpiece@gmail.com>
 Charles J Archer <charles.j.archer@intel.com>
 Charles King <charles.king@cornelisnetworks.com>
-Chen Zhao <soniczhao@gmail.com>
+Charles Shereda <charles.shereda@cornelisnetworks.com>
 Chenwei Zhang <chenwz@amazon.com>
+Chen Zhao <soniczhao@gmail.com>
 Chien Tin Tung <chien.tin.tung@intel.com>
 Chris Dolan <chrisdolan@google.com>
 Chuck Fossen <chuckf@cray.com>
@@ -108,6 +109,7 @@ Jiakun Yan <jiakunyan1998@gmail.com>
 Jianxin Xiong <jianxin.xiong@intel.com>
 Jie Zhang <zhngaj@amazon.com>
 Jim Snow <jim.m.snow@intel.com>
+Jingyin Tang <jytang@amazon.com>
 Jithin Jose <jithin.jose@intel.com>
 Joe Doyle <joseph.doyle@intel.com>
 Johannes Ziegenbalg <Johannes.Ziegenbalg@gmail.com>
@@ -123,8 +125,8 @@ jroznova <julia.roznova@intel.com>
 Juee Himalbhai Desai <juee.himalbhai.desai@intel.com>
 Kaike Wan <kaike.wan@intel.com>
 Ken Raffenetti <raffenet@mcs.anl.gov>
-Kevan Rehm <krehm@cray.com>
 Kevan rehm <krehm@cray.com>
+Kevan Rehm <krehm@cray.com>
 kseager <kayla.seager@intel.com>
 Kyle Gerheiser <kyle.gerheiser@intel.com>
 Latchesar Ionkov <lionkov@lanl.gov>
@@ -154,10 +156,10 @@ Mohan Gandhi <mohgan@amazon.com>
 muttormark <mike.uttormark@hpe.com>
 Neil Spruit <neil.r.spruit@intel.com>
 Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>
-Nikhil Nanal <nikhil.nanal@intel.com>
-nikhilnanal <nikhil.nanal1@intel.com>
-nikhilnanal <nikhil.nanal@intel.com>
 nikhilnanal <nikhilnanal1@gmail.com>
+nikhilnanal <nikhil.nanal1@intel.com>
+Nikhil Nanal <nikhil.nanal@intel.com>
+nikhilnanal <nikhil.nanal@intel.com>
 Nikita Gusev <nikita.gusev@intel.com>
 Nikola Dancejic <dancejic@amazon.com>
 Oblomov, Sergey <hoopoepg@gmail.com>
@@ -166,10 +168,10 @@ OFIWG Bot <ofiwg@lists.openfabrics.org>
 Olivier Serres <oserres@google.com>
 orbea <orbea@riseup.net>
 Paolo Inaudi <p91paul@gmail.com>
+patrickbueb <70724661+patrickbueb@users.noreply.github.com>
 Patrick Bueb <patrick.bueb@hpe.com>
 Patrick MacArthur <pmacarth@iol.unh.edu>
 Patrick McCormick <patrick.m.mccormick@intel.com>
-patrickbueb <70724661+patrickbueb@users.noreply.github.com>
 Paul Coffman <pcoffman@anl.gov>
 Pavan Balaji <balaji@anl.gov>
 Peinan Zhang <peinan.zhang@intel.com>
@@ -185,8 +187,8 @@ Raghu Raja <rajachan@protonmail.com>
 Raghu Raja <rajachan@users.noreply.github.com>
 Ralf Juengling <ralfjuen@amazon.com>
 Reese Faucette <rfaucett@cisco.com>
-Rich Welch <rlwelch@amazon.com>
 Richard Halkyard <rhalkyard@cray.com>
+Rich Welch <rlwelch@amazon.com>
 Robert Wespetal <wesper@amazon.com>
 Rohit Zambre <rzambre@uci.edu>
 Ryan Hankins <rqh@amazon.com>
@@ -208,11 +210,11 @@ Srdjan Milakovic <srdjan@rice.edu>
 Srikrishna Gurugubelli <gurugubs@amazon.com>
 Stan Smith <stan.smith@intel.com>
 Stephen Oost <stephen.oost@intel.com>
+Steven Vormwald <sdvormwa@cray.com>
 Steve Welch <swelch@systemfabricworks.com>
 Steve Welch <welch@hpe.com>
-Steven Vormwald <sdvormwa@cray.com>
-Sung-Eun Choi <sungeun@cray.com>
 Sung-Eun Choi <sungeunchoi@users.noreply.github.com>
+Sung-Eun Choi <sungeun@cray.com>
 Sylvain Didelot <didelot.sylvain@gmail.com>
 Sylvain Didelot <sdidelot@ddn.com>
 Tang, Jingyin <jytang@amazon.com>
@@ -234,8 +236,8 @@ Ubuntu <ubuntu@ip-172-31-15-224.ec2.internal>
 Venkata Krishna Nimmagadda <nvkrishna85@gmail.com>
 Venkata Krishna Nimmagadda <venkata.krishna.nimmagadda@intel.com>
 Vishwas Dsouza <vidsouza@amazon.com>
-Wei Zhang <wzam@amazon.com>
 Wei Zhang <wzam@amazonc.com>
+Wei Zhang <wzam@amazon.com>
 Wenduo Wang <wenduwan@amazon.com>
 wenduwan <wenduwan@amazon.com>
 wenduwan <wenduwdan@amazon.com>
@@ -243,13 +245,13 @@ Wesley Bland <wesley.bland@intel.com>
 William Zhang <wilzhang@amazon.com>
 Xuezhao Liu <xuezhao.liu@intel.com>
 Xuyang Wang <xuywang@cisco.com>
-yohann <yohann.burette@intel.com>
 Yohann Burette <yohann.burette@intel.com>
+yohann <yohann.burette@intel.com>
 Yulu Jia <yulu.jia@intel.com>
-Zach <ztiffany@cray.com>
 Zach Dworkin <zachary.dworkin@intel.com>
 Zach Tiffany <zachary.tiffany@hpe.com>
 Zach Tiffany <ztiffany@cray.com>
+Zach <ztiffany@cray.com>
 zdworkin <zachary.dworkin@intel.com>
 Zhaojuan Guo <zguo@redhat.com>
 zhngaj <zhngaj@amazon.com>
